// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Image/Image.tools.svelte: Broken 1`] = `
<span>
  <img
    alt="./unknown.jpg"
    class="w-64 h-64 inline-block rounded-sm svelte-dtt58s"
    height="256"
    loading="lazy"
    src="./unknown.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</span>
`;

exports[`Toolshot components/Image/Image.tools.svelte: Broken rounded 1`] = `
<span>
  <img
    alt=""
    class="w-64 h-64 inline-block rounded-full hidden svelte-dtt58s"
    height="256"
    loading="lazy"
    width="256"
  />
   
  <span
    class="w-64 h-64 inline-block svelte-dtt58s rounded-full"
  >
    <i
      class="material-icons svelte-dtt58s"
    >
      person
    </i>
  </span>
  
   
  <div>
    
  </div>
</span>
`;

exports[`Toolshot components/Image/Image.tools.svelte: Default 1`] = `
<span>
  <img
    alt="./cover.jpg"
    class="w-64 h-64 inline-block rounded-sm svelte-dtt58s"
    height="256"
    loading="lazy"
    src="./cover.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</span>
`;

exports[`Toolshot components/Image/Image.tools.svelte: Rouded 1`] = `
<span>
  <img
    alt="./avatar.jpg"
    class="w-64 h-64 inline-block rounded-full svelte-dtt58s"
    height="256"
    loading="lazy"
    src="./avatar.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</span>
`;

exports[`Toolshot components/Image/Image.tools.svelte: With escaped path 1`] = `
<span>
  <img
    alt="./# Films/cover.jpg"
    class="w-64 h-64 inline-block rounded-sm svelte-dtt58s"
    height="256"
    loading="lazy"
    src="./%23 Films/cover.jpg"
    width="256"
  />
   
  
   
  <div>
    
  </div>
</span>
`;
